feat(server): support git clone options
