# apps/server/docs/swagger.yaml
@@ -303,8 +303,14 @@ definitions:
         type: string
       container_id:
         type: string
+      depth:
+        type: integer
+      filter:
+        type: string
       repo_url:
         type: string
+      single_branch:
+        type: boolean
       target_path:
         type: string
     required:
